--- a/css/iniciar-sesion.css
+++ b/css/iniciar-sesion.css
@@ -42,6 +42,7 @@ section {
 
 article {
     margin-top: 10px;
+    margin-bottom: 20px;
     width: 25vw;
     height: 50vh;
     background-color: white;
