update: nueva resolución

--- a/css/iniciar-sesion.css
+++ b/css/iniciar-sesion.css
@@ -182,4 +182,24 @@ input::placeholder{
     }
 }
 
+
+@media(min-width: 892px) and (max-height: 412px) {
+    #header-div-titulo-logo{
+        width: 50%;
+        margin: 10px;
+    }
+    .header-div-titulo {
+        font-size: 3rem;
+    }
+    article {
+        width: 70vw;
+        height: 100vh;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    input {
+        margin: 2%;
+    }
+}
 /* or (max-width: 1024) */
